--- a/App/View/template/home.phtml
+++ b/App/View/template/home.phtml
@@ -1,7 +1,7 @@
 <?php /** @var \App\Model\View\Renderer $this */ ?>
 
 <?php /** @var App\Model\Core\Entity\Collection $_companies */ ?>
-<?php $_companies = $this->getData('companies') ?>
+<?php $_companies = null;//$this->getData('companies') ?>
 <?php if ($_companies && $_companies->getSize()): ?>
     <?php while ($_company = $_companies->fetchItem()): ?>
         <div><?php echo $_company->getName() ?></div>
