--- a/App/View/template/home.phtml
+++ b/App/View/template/home.phtml
@@ -1,12 +1,12 @@
 <?php /** @var \App\Model\View\Renderer $this */ ?>
 
-<?php /** @var App\Model\Core\Entity\Collection $_companies */ ?>
-<?php $_companies = null;//$this->getData('companies') ?>
-<?php if ($_companies && $_companies->getSize()): ?>
-    <?php while ($_company = $_companies->fetchItem()): ?>
-        <div><?php echo $_company->getName() ?></div>
+<?php /** @var App\Model\Core\Entity\Collection $_products */ ?>
+<?php $_products = $this->getData('products') ?>
+<?php if ($_products && $_products->getSize()): ?>
+    <?php while ($_product = $_products->fetchItem()): ?>
+        <div><?php echo $_product->getName() ?></div>
     <?php endwhile; ?>
 <?php else: ?>
-    <div>Пока нет компаний.</div>
+    <div>Пока нет товаров.</div>
     <button>Добавить</button>
 <?php endif; ?>
