--- a/App/View/template/admin/product/list.phtml
+++ b/App/View/template/admin/product/list.phtml
@@ -7,7 +7,7 @@
     <?php while ($_product = $_products->fetchItem()): ?>
         <div><?php echo $_product->getName() ?></div>
         <div><?php echo $_product->getPrice() . ' руб.' ?></div>
-        <div><?php echo $_product->getCategoryId() ?></div>
+        <a href="/admin/productEdit/?id=<?php echo $_product->getId() ?>">Редактировать</a>
     <?php endwhile; ?>
 <?php else: ?>
     <h1>Пока нет товаров :(</h1>
