--- a/App/View/layout/base.phtml
+++ b/App/View/layout/base.phtml
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-<!--    <link rel="stylesheet" type="text/css" href="public/css/main.css"/>-->
+    <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/public/css/common.css"/>
+    <script type="application/javascript" src="/public/js/common.js"></script>
     <title>ПВИ Лабораторная 1</title>
 <!--    <link rel="stylesheet" href="/css/normalize.css">-->
 </head>
