--- a/App/View/template/admin/product/list.phtml
+++ b/App/View/template/admin/product/list.phtml
@@ -1,14 +1,21 @@
 <?php /** @var \App\Model\View\Renderer $this */ ?>
 
-<?php /** @var App\Model\Core\Entity\Collection $_products */ ?>
-<?php $_products = $this->getData('products') ?>
-<?php if ($_products && $_products->getSize()): ?>
+<?php /** @var App\Model\Core\Entity\Collection $products */ ?>
+<?php $products = $this->getData('products') ?>
+<?php if ($products && $products->getSize()): ?>
     <h1>Товары</h1>
-    <?php while ($_product = $_products->fetchItem()): ?>
+    <?php /** @var App\Model\Product $_product */ ?>
+    <?php while ($_product = $products->fetchItem()): ?>
         <div><?php echo $_product->getName() ?></div>
-        <div><?php echo $_product->getPrice() . ' руб.' ?></div>
+        <div>Цена: <?php echo $_product->getPrice() . ' руб.' ?></div>
+        <div>Количество: <?php echo $_product->getQty() ?></div>
+        <?php if ($_product->getImage()): ?>
+            <div><img src="<?php echo $_product->getImageUrl() ?>" alt="<?php echo $_product->getName() ?>" width="300px" height="150px"></div>
+        <?php endif; ?>
         <a href="/admin/product/edit/?id=<?php echo $_product->getId() ?>">Редактировать</a>
     <?php endwhile; ?>
 <?php else: ?>
     <h1>Пока нет товаров :(</h1>
 <?php endif; ?>
+<br>
+<a href="/admin/product/new">Добавить</a>
