--- a/App/View/layout/admin/base.phtml
+++ b/App/View/layout/admin/base.phtml
@@ -3,15 +3,21 @@
 <head>
     <meta charset="utf-8">
     <script   src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="/public/css/common.css"/>
-    <script type="application/javascript" src="/public/js/common.js"></script>
+    <link rel="stylesheet" type="text/css" href="/public/css/admin/common.css"/>
+    <script type="application/javascript" src="/public/js/admin/common.js"></script>
     <title>Админка ПВИ Лабораторная 1</title>
 <!--    <link rel="stylesheet" href="/css/normalize.css">-->
 </head>
 <body>
+    <header>
+        VaD1ke&Cheerd Shop
+    </header>
     <div class="page-content">
         <?php /** @var App\Model\View\Renderer $this */ ?>
         <?php $this->renderTemplate() ?>
     </div>
+    <footer>
+        2016
+    </footer>
 </body>
 </html>
