--- a/public/css/common.css
+++ b/public/css/common.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header__shop, .footer__info {
-    padding: 1rem;
+    padding: 1.4rem;
 
     text-transform: uppercase;
     font-size: 20pt;
@@ -80,11 +80,14 @@ body {
 .product__img-wrapper{
     height: 17rem;
     position: relative;
+    margin-top: .5rem;
 }
 .product__img {
     max-width: 100%;
     height: 100%;
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .product__name {
     text-align: center;
@@ -111,6 +114,9 @@ body {
 
 .product__btn-buy:hover {
     cursor: pointer;
+    background-color: rgba(46, 204, 113,  0.7);
+    transition: opacity 1s;
+    border-color: #0C5;
 }
 
 .product__search {
@@ -120,7 +126,7 @@ body {
     font: 14px "Trebuchet MS",Helvetica,sans-serif;
     text-transform: none;
     font-style: italic;
-    color: #fff;
+    color: #666;
     width: 100%;
     box-sizing: border-box;
     min-width: 350px;
