--- a/App/View/template/admin/login.phtml
+++ b/App/View/template/admin/login.phtml
@@ -1,7 +1,9 @@
 <?php /** @var \App\Model\View\Renderer $this */ ?>
 
-<form method="post">
-    <input type="text" name="admin[name]" id="name" placeholder="Имя пользователя">
-    <input type="password" name="admin[password]" id="password" placeholder="Пароль">
-    <input type="submit" value="Войти">
-</form>
+<div class="login">
+    <form method="post">
+        <input type="text" name="admin[name]" id="name" placeholder="Имя пользователя">
+        <input type="password" name="admin[password]" id="password" placeholder="Пароль">
+        <input type="submit" value="Войти">
+    </form>
+</div>
