--- a/App/View/layout/base.phtml
+++ b/App/View/layout/base.phtml
@@ -6,6 +6,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script type="application/javascript" src="/public/js/common.js"></script>
+    <link rel="stylesheet" type="text/css" href="/public/css/global.css"/>
     <link rel="stylesheet" type="text/css" href="/public/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="/public/css/fonts.css"/>
 </head>
