Change admin templates for new entities

--- a/App/View/template/admin/category/new.phtml
+++ b/App/View/template/admin/category/new.phtml
@@ -5,8 +5,12 @@
 $categories = $this->getData('categories');
 ?>
 <h2>Добавить новую категорию</h2>
-<form action="/admin/category/save" method="post" enctype="multipart/form-data">
-    <label for="name">Название</label>
-    <input type="text" name="category[name]" id="name"">
-    <input type="submit" value="Сохранить">
-</form>
+<div class="entity-edit">
+    <form action="/admin/category/save" method="post" enctype="multipart/form-data">
+        <div class="form__row">
+            <label class="form__row-label" for="name">Название</label>
+            <input type="text" name="category[name]" id="name"">
+        </div>
+        <input type="submit" value="Сохранить">
+    </form>
+</div>
