Add product buy action

--- a/App/View/layout/base.phtml
+++ b/App/View/layout/base.phtml
@@ -8,9 +8,18 @@
     <script type="application/javascript" src="/public/js/common.js"></script>
     <link rel="stylesheet" type="text/css" href="/public/css/global.css"/>
     <link rel="stylesheet" type="text/css" href="/public/css/common.css"/>
+    <link rel="stylesheet" type="text/css" href="/public/css/popup.css"/>
     <link rel="stylesheet" type="text/css" href="/public/css/fonts.css"/>
 </head>
 <body>
+    <div id="popup" class="popup" role="alert">
+        <div class="popup__container">
+            <div class="popup__container-inside">
+                <img src="../../../public/media/x.png" class="popup__close pointer" alt="Закрыть" >
+                <div class="text-title popup__title"></div>
+            </div>
+        </div>
+    </div>
     <section class="container">
         <header class="header">
             <div class="header__shop">VaD1ke&Cheerd Shop</div>
